--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import com.ciscowebex.androidsdk.build.*
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = Versions.kotlin
+    ext.kotlin_version = "2.2.21"
     ext.dokka_version = Versions.dokka
     repositories {
         google()
@@ -10,10 +10,11 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.5.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${Versions.kotlin}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:${Versions.dokka}"
         classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+        classpath 'com.appdynamics:appdynamics-gradle-plugin:25.9.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -27,7 +28,6 @@ allprojects {
         maven {
             url 'https://devhub.cisco.com/artifactory/webexsdk/'
         }
-        flatDir { dirs 'aars' }
     }
 }
 
