--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ abiFilters=armeabi-v7a;arm64-v8a;x86;x86_64
 enableReleaseTesting=OFF
 enableReleaseUITesting=OFF
 enableCodeCoverage=OFF
-org.gradle.jvmargs=-Xms2096m -Xmx8192m -XX:MaxMetaspaceSize=4096m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms2096m -Xmx8192m -XX:MaxMetaspaceSize=4096m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 org.gradle.daemon=true
 org.gradle.parallel=true
 android.native.buildOutput=verbose
